--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&display=swap');
+
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Cinzel', serif;
+  background-image: url("dragons.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center; 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  margin: auto;
+}
+
+.App {
+  text-align: center;
+  margin: 2rem;
+  padding: 1rem;
+  max-width: 40rem;
+  background-color: rgb(194, 151, 94);
+  border-radius: 5px;
+  opacity: 0.75;
+  color: rgb(0, 0, 0);
+}
+
+.quote{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+
+.quoteIcon{
+  font-size: 1.5rem;
+}
+
+.author{
+  font-size: 1.1rem;
+  font-style: italic;
+  text-align: right;
+  font-weight: 500;
+}
+
+p{
+  margin: 0;
+}
+
+.book{
+  margin-bottom: 1.5rem;
+}
+
+button{
+  margin: 0.5rem 0;
+  padding: 0.6rem 0.8rem;
+  font-family: 'Cinzel', serif;
+  font-size: 1.1rem;
+  font-weight: 600;
+  border: none;
+  border-radius: 2px;
+  background-color: rgb(155, 40, 38);
+  color: white;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: white;
+}
+
+.btns-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.twitter {
+  font-size: 1.2rem;
 }
